# python-template-project

./: .gitignore  README.md  bak_setup.py  pyproject.toml  run.sh
example/: example_module.py
sample/: example_module.py
share/: readme.txt
tests/: bak_pytest.ini  conftest.py  pytest.ini  test_example_module.py
