[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["Thomas Eiband <thomas.eiband@gmail.de>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
poetry2setup = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
