[tool.poetry]
name = "TODO"
version = "0.1.0"
description = "TODO"
authors = ["Thomas Eiband <thomas.eiband@gmail.de>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
# poetry2setup = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
